<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="add_food">Add Food</string>
    <string name="save">Save</string>
    <string name="food_name">Food Name</string>
    <string name="calories">Calories</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="message_delete_item_confirmation">Are you sure you want to delete this item?</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="amount">Amount</string>
    <string name="portion_name">Portion Name</string>
    <string name="create">Create</string>
    <string name="add_portion">Add Portion</string>
    <string name="error_input_empty">This field can\'t be empty</string>
    <string name="food_list">Food List</string>
    <string name="breakfast">Breakfast</string>
    <string name="other">Other</string>
    <string name="snack2">Snack 2</string>
    <string name="snack1">Snack1</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="add_consumed_food">Add Consumed Food</string>
    <string name="portion">Portion:</string>
    <string name="custom">Custom:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="meal">Meal</string>

    <string-array name="meals">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/dinner</item>
        <item>@string/snack1</item>
        <item>@string/snack2</item>
        <item>@string/other</item>
    </string-array>
</resources>
