<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rh.calorietracker.feature.dayoverview.DayOverviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_previous_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"/>

        <TextView
            android:id="@+id/text_selected_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_list_item"/>

        <Button
            android:id="@+id/button_next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_list_item">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/calories"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_total_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/protein"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_total_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/carbs"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_total_carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/fat"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_total_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_consumed_foods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
